# investment_bot

./: .gitignore  pyproject.toml
.github/workflows/: deploy.yml
src/: Dockerfile.api  Dockerfile.client  app_client.py  config.py  docker-compose.yml  processor.py  requirements.txt  server.py
src/chroma_db/1f678979-3da5-4715-815e-39cba478c33c/: index_metadata.pickle
src/data_pipeline/: app_rag.py  chunking.py  indexing.py  ingest.py  rag_agent.py  retrieval.py
