[project]
name = "stockbot"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0.0"
dependencies = [
    "yfinance (>=0.2.66,<0.3.0)",
    "ib-insync (>=0.9.86,<0.10.0)",
    "ib-async (>=2.0.1,<3.0.0)",
    "google (>=3.0.0,<4.0.0)",
    "google-genai (>=1.52.0,<2.0.0)",
    "streamlit (>=1.51.0,<2.0.0)",
    "plotly (>=6.5.0,<7.0.0)",
    "curl-cffi (>=0.13.0,<0.14.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "fastapi (>=0.122.0,<0.123.0)",
    "aiofiles (>=25.1.0,<26.0.0)",
    "async-sync (>=0.1.1,<0.2.0)",
    "pymupdf (>=1.26.6,<2.0.0)",
    "langchain-text-splitters (>=1.0.0,<2.0.0)",
    "chromadb (>=1.3.5,<2.0.0)",
    "openai (>=2.8.1,<3.0.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "python-multipart (>=0.0.20,<0.0.21)"
]

[tool.poetry]
packages = [{include = "stockbot", from = "src"}]

[[tool.poetry.source]]
name = "mirrors"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
priority = "primary"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
